[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "verosynthea-validator"
version = "0.2.0"
description = "Fairness testing for ML models using Australian demographic data"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Verosynthea", email = "hello@verosynthea.com"},
]
keywords = ["fairness", "ml", "demographics", "australia", "synthetic-data", "census"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pandas>=1.5",
    "numpy>=1.23",
    "huggingface_hub>=0.20.0",
    "datasets>=2.14.0",
]

[project.optional-dependencies]
hf = ["datasets>=2.0"]
# Pro tier calls the Verosynthea API. The client uses ``requests``
# (lazy-imported so free-tier users never need it). Installed via
# ``pip install verosynthea-validator[pro]``.
pro = ["requests>=2.28"]
dev = ["pytest>=7.0", "scikit-learn>=1.2", "requests>=2.28"]

[project.urls]
Homepage = "https://verosynthea.com/for-ai-labs"
Repository = "https://github.com/verosynthea/verosynthea-validator"
Dataset = "https://huggingface.co/datasets/vero-synthea/ausynth-sample"
Documentation = "https://verosynthea.com/about"
